# ezgrid

./: .gitignore  README.md  environment.yml  pyproject.toml
src/ezgrid/: grid.py  irregular.py
