[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezgrid"
version = "0.0.1"
readme = "README.md"
description = "A package to simplify the generation of point grids for spatial analysis"
keywords = ["GIS", "geopandas",]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["ezgrid*"]  # package names should match these glob patterns (["*"] by default)
#exclude = []  # exclude packages matching these glob patterns (empty by default)

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100