[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezgrid"
version = "0.0.1"
readme = "README.md"
description = "A package to simplify point allocation within polygons for spatial analysis"
keywords = ["GIS", "geopandas",]
requires-python = ">=3.9"
dependencies = [
    "geocube",
    "geopandas>=0.14",
    "matplotlib",
    "numpy",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["ezgrid*"]  # package names should match these glob patterns (["*"] by default)
#exclude = []  # exclude packages matching these glob patterns (empty by default)

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100